--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
     <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <quarkus-plugin.version>2.0.1.Final</quarkus-plugin.version>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
-    <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
-    <quarkus.platform.version>2.0.1.Final</quarkus.platform.version>
+    <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
+    <quarkus.platform.version>2.6.2.Final</quarkus.platform.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
+    <quarkus-prettytime.version>0.2.1</quarkus-prettytime.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>io.quarkiverse.prettytime</groupId>
       <artifactId>quarkus-prettytime</artifactId>
-      <version>0.0.4</version>
+      <version>${quarkus-prettytime.version}</version>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
@@ -70,7 +70,7 @@
       <plugin>
         <groupId>io.quarkus</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
-        <version>${quarkus-plugin.version}</version>
+        <version>${quarkus.platform.version}</version>
         <extensions>true</extensions>
         <executions>
           <execution>
